build/log/idf_py_stdout_output_9458
Command: ninja all
[1/9] Building C object esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj
FAILED: [code=1] esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj 
/home/goringich/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20251107/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/goringich/hello_p4/build/config -I/home/goringich/hello_p4/components/i2c_bus/include -I/home/goringich/esp-idf/components/newlib/platform_include -I/home/goringich/esp-idf/components/freertos/config/include -I/home/goringich/esp-idf/components/freertos/config/include/freertos -I/home/goringich/esp-idf/components/freertos/config/riscv/include -I/home/goringich/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/goringich/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/goringich/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/goringich/esp-idf/components/freertos/esp_additions/include -I/home/goringich/esp-idf/components/esp_hw_support/include -I/home/goringich/esp-idf/components/esp_hw_support/include/soc -I/home/goringich/esp-idf/components/esp_hw_support/include/soc/esp32p4 -I/home/goringich/esp-idf/components/esp_hw_support/dma/include -I/home/goringich/esp-idf/components/esp_hw_support/ldo/include -I/home/goringich/esp-idf/components/esp_hw_support/debug_probe/include -I/home/goringich/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/goringich/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/goringich/esp-idf/components/esp_hw_support/power_supply/include -I/home/goringich/esp-idf/components/esp_hw_support/port/esp32p4/. -I/home/goringich/esp-idf/components/esp_hw_support/port/esp32p4/include -I/home/goringich/esp-idf/components/esp_hw_support/port/esp32p4/private_include -I/home/goringich/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32p4/. -I/home/goringich/esp-idf/components/heap/include -I/home/goringich/esp-idf/components/heap/tlsf -I/home/goringich/esp-idf/components/log/include -I/home/goringich/esp-idf/components/soc/include -I/home/goringich/esp-idf/components/soc/esp32p4 -I/home/goringich/esp-idf/components/soc/esp32p4/include -I/home/goringich/esp-idf/components/soc/esp32p4/register/hw_ver1 -I/home/goringich/esp-idf/components/hal/platform_port/include -I/home/goringich/esp-idf/components/hal/esp32p4/include -I/home/goringich/esp-idf/components/hal/include -I/home/goringich/esp-idf/components/esp_rom/include -I/home/goringich/esp-idf/components/esp_rom/esp32p4/include -I/home/goringich/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -I/home/goringich/esp-idf/components/esp_rom/esp32p4 -I/home/goringich/esp-idf/components/esp_common/include -I/home/goringich/esp-idf/components/esp_system/include -I/home/goringich/esp-idf/components/esp_system/port/soc -I/home/goringich/esp-idf/components/esp_system/port/include/riscv -I/home/goringich/esp-idf/components/esp_system/port/include/private -I/home/goringich/esp-idf/components/riscv/include -I/home/goringich/esp-idf/components/lwip/include -I/home/goringich/esp-idf/components/lwip/include/apps -I/home/goringich/esp-idf/components/lwip/include/apps/sntp -I/home/goringich/esp-idf/components/lwip/lwip/src/include -I/home/goringich/esp-idf/components/lwip/port/include -I/home/goringich/esp-idf/components/lwip/port/freertos/include -I/home/goringich/esp-idf/components/lwip/port/esp32xx/include -I/home/goringich/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/goringich/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/goringich/esp-idf/components/driver/deprecated -I/home/goringich/esp-idf/components/driver/i2c/include -I/home/goringich/esp-idf/components/driver/touch_sensor/include -I/home/goringich/esp-idf/components/driver/twai/include -I/home/goringich/esp-idf/components/esp_pm/include -I/home/goringich/esp-idf/components/esp_ringbuf/include -I/home/goringich/esp-idf/components/esp_driver_gpio/include -I/home/goringich/esp-idf/components/esp_driver_pcnt/include -I/home/goringich/esp-idf/components/esp_driver_gptimer/include -I/home/goringich/esp-idf/components/esp_driver_spi/include -I/home/goringich/esp-idf/components/esp_driver_mcpwm/include -I/home/goringich/esp-idf/components/esp_driver_ana_cmpr/include -I/home/goringich/esp-idf/components/esp_driver_i2s/include -I/home/goringich/esp-idf/components/esp_driver_sdmmc/include -I/home/goringich/esp-idf/components/sdmmc/include -I/home/goringich/esp-idf/components/esp_driver_sdspi/include -I/home/goringich/esp-idf/components/esp_driver_sdio/include -I/home/goringich/esp-idf/components/esp_driver_dac/include -I/home/goringich/esp-idf/components/esp_driver_rmt/include -I/home/goringich/esp-idf/components/esp_driver_tsens/include -I/home/goringich/esp-idf/components/esp_driver_sdm/include -I/home/goringich/esp-idf/components/esp_driver_i2c/include -I/home/goringich/esp-idf/components/esp_driver_uart/include -I/home/goringich/esp-idf/components/vfs/include -I/home/goringich/esp-idf/components/esp_driver_ledc/include -I/home/goringich/esp-idf/components/esp_driver_parlio/include -I/home/goringich/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/goringich/esp-idf/components/esp_driver_twai/include -I/home/goringich/esp-idf/components/esp_timer/include -march=rv32imafc_zicsr_zifencei_xesploop_xespv -mabi=ilp32f  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/goringich/hello_p4=. -fmacro-prefix-map=/home/goringich/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -march=rv32imafc_zicsr_zifencei_xesppie -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj -MF esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj.d -o esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj -c /home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c: In function 'i2c_bus_scan':
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c:108:8: warning: variable 'present' set but not used [-Wunused-but-set-variable]
  108 |   bool present[128] = {0};
      |        ^~~~~~~
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c: In function 'i2c_bus_log_scan_table':
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c:241:1: error: statement with no effect [-Werror=unused-value]
  241 | 5
      | ^
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c:241:2: error: expected ';' before 'off'
  241 | 5
      |  ^
      |  ;
  242 |     off += snprintf(line + off, sizeof(line) - off, "%02X: ", row << 4);
      |     ~~~
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c: At top level:
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c:259:13: warning: 'i2c_bus_selfcheck_gpio' defined but not used [-Wunused-function]
  259 | static bool i2c_bus_selfcheck_gpio(const char *where) {
      |             ^~~~~~~~~~~~~~~~~~~~~~
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c:234:13: warning: 'i2c_bus_log_scan_table' defined but not used [-Wunused-function]
  234 | static void i2c_bus_log_scan_table(const bool present[128]) {
      |             ^~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/goringich/hello_p4/build/bootloader/esp-idf/esptool_py && /home/goringich/.espressif/python_env/idf5.5_py3.14_env/bin/python /home/goringich/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 /home/goringich/hello_p4/build/bootloader/bootloader.bin
Bootloader binary size 0x5a30 bytes. 0x5d0 bytes (6%) free.
ninja: build stopped: subcommand failed.
